@@ -114,7 +114,7 @@ public class EarningTimerangeService {
      */
     @Transactional()
     public boolean deleteByTitle(String timerangeTitle) {
-        if (timerangeTitle == null || timerangeTitle.trim().isBlank()) {
+        if (timerangeTitle == null || timerangeTitle.trim().isEmpty()) {
             return false;
         }
 
