@@ -101,7 +101,7 @@ public class BookCategoryService {
      */
     @Transactional()
     public boolean deleteByTitle(String categoryTitle) {
-        if (categoryTitle == null || categoryTitle.trim().isBlank()) {
+        if (categoryTitle == null || categoryTitle.trim().isEmpty()) {
             return false;
         }
         BookCategory bookCategory = this.getBookCategoryByCategoryTitle(categoryTitle);
