@@ -101,7 +101,7 @@ public class OrganizationCategoryService {
      */
     @Transactional()
     public boolean deleteByTitle(String categoryTitle) {
-        if (categoryTitle == null || categoryTitle.trim().isBlank()) {
+        if (categoryTitle == null || categoryTitle.trim().isEmpty()) {
             return false;
         }
 
